force-app/main/default/objects/CasusBelli__c/CasusBelli__c.object-meta.xml
<CustomObject>
    <label>CasusBelli</label>
    <pluralLabel>CasusBellis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>CasusBelli Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>