force-app/main/default/objects/CasusBelli__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <label>End date</label>
    <type>Text</type>
    <length>255</length>
</CustomField>