force-app/main/default/objects/CasusBelli__c/fields/First__c.field-meta.xml
<CustomField>
    <fullName>First__c</fullName>
    <label>First</label>
    <type>Text</type>
    <length>255</length>
</CustomField>