force-app/main/default/objects/CasusBelli__c/fields/Second__c.field-meta.xml
<CustomField>
    <fullName>Second__c</fullName>
    <label>Second</label>
    <type>Text</type>
    <length>255</length>
</CustomField>